--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ body {
 
 .sub_page .header_section {
   position: unset;
-  background: -webkit-gradient(linear, left top, right top, color-stop(75%, transparent), color-stop(75%, #240a5e));
-  background: linear-gradient(to right, transparent 75%, #240a5e 75%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(75%, transparent), color-stop(75%, #0d051f));
+  background: linear-gradient(to right, transparent 75%, #090314c4 75%);
 }
 
 .header_section {
@@ -231,7 +231,7 @@ a:focus {
 .navbar-brand span {
   font-size: 24px;
   font-weight: 700;
-  color: #240a5e;
+  color: #0a0514;
 }
 
 .custom_nav-container {
@@ -284,16 +284,18 @@ a:focus {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  background-color: #240a5e;
+  background-color: #020704;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+        
 }
 
 .slider_section .slider_container .detail_container #carouselExampleControls {
@@ -341,7 +343,7 @@ a:focus {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   background-repeat: no-repeat;
-  background-color: #240a5e;
+  background-color: #240b5a;
   background-size: 20px;
   background-position: center;
 }
@@ -444,10 +446,10 @@ a:focus {
 .book_section form .btn-container button {
   display: inline-block;
   padding: 10px 65px;
-  background-color: #240a5e;
+  background-color: #080314;
   color: #fefdfc;
   border-radius: 0;
-  border: 1px solid #240a5e;
+  border: 1px solid #0a031a;
   margin-top: 25px;
 }
 
@@ -521,6 +523,7 @@ a:focus {
   border-radius: #000000;
   border: 1px solid #f22324;
   margin-top: 25px;
+  border-radius: 1rem;
 }
 
 .car_section .car_container .box .detail-box a:hover {
@@ -608,10 +611,10 @@ a:focus {
 .best_section .book_now .btn-box a {
   display: inline-block;
   padding: 10px 60px;
-  background-color: #f22324;
+  background-color: #040404;
   color: #fefdfc;
   border-radius: #000000;
-  border: 1px solid #f22324;
+  border: 1px solid #070707;
 }
 
 .best_section .book_now .btn-box a:hover {
@@ -688,11 +691,12 @@ a:focus {
 .rent_section .rent_container .box .price a {
   display: inline-block;
   padding: 8px 25px;
-  background-color: #f22324;
+  background-color: #020000;
   color: #fefdfc;
-  border-radius: #000000;
-  border: 1px solid #f22324;
+  border-radius: 1px;
+  border: 1px solid #000000;
   font-weight: bold;
+  margin-bottom: 9px;
 }
 
 .rent_section .rent_container .box .price a:hover {
